syntax = "proto3";

message SignedMessage {
    // Raw Data that was signed by this message
    bytes SerializedMessage = 1;
    // Specifies the type of contained data for further deserialization
    MessageTypes MessageType = 2;
    // Identifies signature type for verification
    SignatureTypes SignatureType = 3;
    // Public Key used in the signing of orignal message
    bytes PubKey = 4;
    // Signature of signed message
    bytes Signature = 5;
}

// Currently supported message types
enum MessageTypes {
    // Invalid
    Unknown = 0;
    // OIP 0.5 record message
    OIP05 = 1;
    // Historian record
    Historian = 2;
}

// Currently supported signature verification means
enum SignatureTypes {
    // Invalid
    Unknown = 0;
    // FLO address message signing
    Flo = 1;
    // Bitcoin address message signing
    // https://tools.bitcoin.com/verify-message/
    Btc = 2;
}
